# bpn-client

./: .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  NOTICE.md  README.md  ROADMAP.md  SECURITY.md  TRADEMARKS.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture_proposal.yml  bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
apps/badvpn-client/: index.html  package-lock.json  package.json  vite.config.ts
apps/badvpn-client/src/: App.tsx  styles.css
apps/badvpn-client/src-tauri/: Cargo.toml  tauri.conf.json
apps/badvpn-client/src-tauri/capabilities/: default.json
apps/badvpn-client/src-tauri/resources/: README.md
apps/badvpn-client/src-tauri/src/: commands.rs  lib.rs  main.rs  settings.rs
apps/badvpn-client/src/services/: agentClient.ts  updateClient.ts
apps/badvpn-client/src/ui/: NotificationCenter.tsx
crates/badvpn-agent/: Cargo.toml
crates/badvpn-agent/src/: command.rs  ipc.rs  lib.rs  main.rs  mihomo.rs  runtime.rs  security.rs  service.rs  state.rs
crates/badvpn-common/: Cargo.toml
crates/badvpn-common/src/: errors.rs  ipc.rs  lib.rs  mihomo_config.rs  policy.rs  subscription.rs
crates/badvpn-common/tests/: smart_routing_milestone_a.rs
crates/badvpn-common/tests/fixtures/: provider_complex_rules.yaml  provider_full_ru_split.yaml  provider_geosite_ai_youtube_discord.yaml  provider_group_with_direct.yaml  provider_nested_group_with_direct.yaml  provider_no_groups_with_proxies.yaml  provider_no_match.yaml  provider_only_direct.yaml
docs/: BADVPN_IMPLEMENTATION_PLAN.md  PLAN.MD  README.md  qa-win-mvp.md  runtime-mihomo-zapret.md  update-release.md
resources/hashes/: MANIFEST.json.example  latest.json.example
resources/templates/: mihomo.base.yaml  mihomo.smart_hybrid.yaml
scripts/: run-release.ps1  stage-tauri-resources.ps1  tauri.ps1
