[workspace]
members = [
  "crates/badvpn-common",
  "crates/badvpn-agent",
  "apps/badvpn-client/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/Rerowros/bpn-client"
rust-version = "1.89"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
flate2 = { version = "1", features = ["rust_backend"] }
getrandom = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["charset", "http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
windows-sys = "0.61"
windows-service = "0.8"
zip = { version = "8", default-features = false, features = ["deflate-flate2"] }
