[package]
name = "badvpn-common"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
url.workspace = true
