[package]
name = "badvpn-client"
version = "0.1.0"
description = "BPN Client desktop client"
edition.workspace = true
license-file.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "badvpn_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64.workspace = true
badvpn-common = { path = "../../../crates/badvpn-common" }
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tauri = { version = "2", features = ["devtools"] }
tokio.workspace = true
url.workspace = true
windows-sys = { workspace = true, features = ["Win32_Foundation", "Win32_Security_Cryptography", "Win32_Storage_FileSystem", "Win32_System_Pipes"] }
zip.workspace = true
